scroll per view line with scroll wheel (please test)

CCMAIL: kwrite-devel@kde.org
BUG: 256561